# rust_meetup_pyo3

./: .gitignore  .justfile  Cargo.toml  README.md  pyproject.toml  slide-deck.md
python/rust_meetup_pyo3/: __init__.py  basic_python.py  rust_python.py
python/tests/: test_all.py
src/: app.py  lib.rs
